[incubator-kie-issues#908] Fix broken tests (#3442)
Co-authored-by: Gabriele-Cardosi <gabriele.cardosi@ibm.com>